@@ -1,26 +1,11 @@
-plugins {
-    id 'java' apply false
+apply plugin: 'application'
+
+repositories {
+    mavenCentral()
 }
 
-subprojects {
-    apply plugin: 'java'
-
-    java {
-        toolchain {
-            languageVersion = JavaLanguageVersion.of(23)
-        }
-    }
-
-    repositories {
-        mavenCentral()
-    }
-
-    tasks.withType(JavaCompile).configureEach {
-        options.compilerArgs += ['--enable-preview']
-        options.release = 23
-    }
-
-    tasks.withType(JavaExec).configureEach {
-        jvmArgs '--enable-preview'
-    }
+dependencies {
+    implementation 'com.mysql:mysql-connector-j:8.4.0'
 }
+
+mainClassName = 'com.yourcompany.multiplayer.Main'
